added predict function to class

--- a/main.ipynb
+++ b/main.ipynb
@@ -110,43 +110,49 @@
    "source": [
     "# Initialize synergy and anti-synergy parameters\n",
     "synergy = np.zeros([num_players,num_players])\n",
-    "antisynergy = np.zeros([num_players,num_players])\n",
-    "\n",
-    "def x_for_game(teams, date): \n",
-    "    x_1 = np.zeros(num_players)\n",
-    "    x_2 = np.zeros(num_players)\n",
-    "    \n",
-    "    if int(date[5:7]) < 9: \n",
-    "        year = str(int(date[0:4]) - 1)\n",
-    "    else: \n",
-    "        year = date[0:4]\n",
-    "    \n",
-    "    for team in teams: \n",
-    "        game_players = roster[team][year]\n",
-    "        for item in game_players: \n",
-    "            x_1[player_index[item]] = 1\n",
-    "            \n",
-    "    return x_1, x_2"
+    "antisynergy = np.zeros([num_players,num_players])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create a class for linear regression\n",
     "class LinearRegression:\n",
-    "    def __init__(self, step_size=0.01, max_iter=1000000, eps=1e-5,\n",
-    "                 theta_0, verbose=True):\n",
+    "    def __init__(self, synergy, antisynergy, step_size=0.01, max_iter=1000000, eps=1e-5,\n",
+    "                  verbose=True):\n",
     "        \n",
-    "        self.theta = theta_0\n",
+    "        self.synergy = synergy\n",
+    "        self.antisynergy = antisynergy\n",
     "        self.step_size = step_size\n",
     "        self.max_iter = max_iter\n",
     "        self.eps = eps\n",
     "\n",
-    "    def predict(self, x):\n",
-    "        "
+    "    def predict(self, teams, date):\n",
+    "        x, z = x_for_game(teams, date)\n",
+    "        team_1_S = np.matmul(np.transpose(x), np.matmul(self.synergy, x))\n",
+    "        team_2_S = np.matmul(np.transpose(z), np.matmul(self.synergy, z))\n",
+    "        cross_term = np.matmul(np.transpose(x), np.matmul(self.antisynergy, z))\n",
+    "        \n",
+    "        return team_1_S - team_2_S + 2*cross_term\n",
+    "        \n",
+    "    def x_for_game(self, teams, date): \n",
+    "        x_1 = np.zeros(num_players)\n",
+    "        x_2 = np.zeros(num_players)\n",
+    "\n",
+    "        if int(date[5:7]) < 9: \n",
+    "            year = str(int(date[0:4]) - 1)\n",
+    "        else: \n",
+    "            year = date[0:4]\n",
+    "\n",
+    "        for team in teams: \n",
+    "            game_players = roster[team][year]\n",
+    "            for item in game_players: \n",
+    "                x_1[player_index[item]] = 1\n",
+    "\n",
+    "        return x_1, x_2"
    ]
   },
   {
