--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +42,15 @@
     "            \n",
     "        all_players.update(roster[team][year])\n",
     "\n",
+    "num_players = len(all_players)\n",
+    "        \n",
     "# Player dictionary that maps all players to index\n",
     "player_index = dict(zip(list(all_players), range(len(all_players))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PHI' 'ORL']\n"
+     ]
+    }
+   ],
    "source": [
     "# Makes an index of all games that are repeated\n",
     "repeat_indexes = []\n",
@@ -104,24 +114,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize synergy and anti-synergy parameters\n",
-    "synergy = np.zeros([num_players,num_players])\n",
-    "antisynergy = np.zeros([num_players,num_players])"
+    "synergy = np.zeros((num_players,num_players))\n",
+    "antisynergy = np.zeros((num_players,num_players))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper Functions\n",
+    "def gradient(theta, x, y):\n",
+    "    n = x.shape[0]\n",
+    "    grad = np.transpose(sigmoid(x.dot(theta)) - y).dot(x)\n",
+    "    return np.transpose(grad)/n\n",
+    "\n",
+    "def hessian(theta, x):\n",
+    "    n = x.shape[0]\n",
+    "    z = x.dot(theta)\n",
+    "\n",
+    "    hess_matrix = np.zeros((x.shape[1], x.shape[1]))\n",
+    "    for i in range(x.shape[1]):\n",
+    "        for j in range(x.shape[1]):\n",
+    "            if i <= j:\n",
+    "                sigma = sigmoid(z) * (1 - sigmoid(z))\n",
+    "                terms = np.transpose(x[:, i]*x[:, j]).dot(sigma)\n",
+    "                hess_matrix[i][j] = np.sum(terms)/n\n",
+    "                hess_matrix[j][i] = np.sum(terms)/n\n",
+    "\n",
+    "    return hess_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create a class for linear regression\n",
     "class LinearRegression:\n",
-    "    def __init__(self, synergy, antisynergy, step_size=0.01, max_iter=1000000, eps=1e-5,\n",
+    "    def __init__(self, step_size=0.01, max_iter=1000000, eps=1e-5, synergy=None, antisynergy=None, \n",
     "                  verbose=True):\n",
     "        \n",
     "        self.synergy = synergy\n",
@@ -137,7 +175,43 @@
     "        cross_term = np.matmul(np.transpose(x), np.matmul(self.antisynergy, z))\n",
     "        \n",
     "        return team_1_S - team_2_S + 2*cross_term\n",
+    "    \n",
+    "    def gradLossFunction(theta, x, y):\n",
+    "        update = 0\n",
+    "        for i in range(x.shape[0]):\n",
+    "            x = np.matrix(x[i,:])\n",
+    "            y = np.matrix(y[i])\n",
+    "            theta = np.matrix(theta)   \n",
+    "            update += x*x.T*theta*x*x.T + x*y*x.T\n",
+    "            \n",
+    "        return update\n",
+    "    \n",
+    "    def fit(self, x, y):\n",
+    "        update = None\n",
     "        \n",
+    "        while update == None or update >= self.eps:\n",
+    "            update = self.step_size*LinearRegression.gradLossFuction(self.theta, x, y)\n",
+    "            self.theta = self.theta - update\n",
+    "        \n",
+    "    def process_data(self, teams, dates, results)\n",
+    "        num_games = teams.shape[0]\n",
+    "        \n",
+    "        # Create x for all games\n",
+    "        # To access x for 0th game -- x[:, 0] \n",
+    "        x = np.zeros((num_players, num_games))\n",
+    "        for i in range(num_games): \n",
+    "            z, t = x_for_game(self, teams[i], date)\n",
+    "            combined = np.vstack((z, t))\n",
+    "            x[:, i] = combined\n",
+    "            \n",
+    "        # Create y for all games (if team A wins, y = 1; if team B wins, y = 0)\n",
+    "        y = np.zeros((num_games, 1))\n",
+    "        for i in range(num_games): \n",
+    "            if results[i] > 0: \n",
+    "                y[i] = 1\n",
+    "            else:\n",
+    "                y[i] = 0\n",
+    "                     \n",
     "    def x_for_game(self, teams, date): \n",
     "        x_1 = np.zeros(num_players)\n",
     "        x_2 = np.zeros(num_players)\n",
