--- a/main.ipynb
+++ b/main.ipynb
@@ -9,6 +9,7 @@
     "import pandas as pd \n",
     "import numpy as np\n",
     "import os\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "curr_directory = os.getcwd()\n",
     "\n",
@@ -82,15 +83,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['PHI' 'ORL']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Makes an index of all games that are repeated\n",
     "repeat_indexes = []\n",
@@ -110,99 +103,6 @@
     "unique_game_results = game_results[repeat_indexes]\n",
     "unique_teams = teams[repeat_indexes]\n",
     "unique_dates = dates[repeat_indexes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(unique_teams.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize synergy and anti-synergy parameters\n",
-    "synergy = np.zeros((num_players,num_players))\n",
-    "antisynergy = np.zeros((num_players,num_players))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def x_for_game(teams, date): \n",
-    "    x_1 = np.zeros((num_players, 1))\n",
-    "    x_2 = np.zeros((num_players, 1))\n",
-    "\n",
-    "    if int(date[5:7]) < 9: \n",
-    "        year = str(int(date[0:4]) - 1)\n",
-    "    else: \n",
-    "        year = date[0:4]\n",
-    "\n",
-    "    team_1_players = roster[team][year]\n",
-    "    for item in team_1_players: \n",
-    "        x_1[player_index[item]] = 1\n",
-    "\n",
-    "    team_2_players = roster[team][year]\n",
-    "    for item in team_2_players: \n",
-    "        x_2[player_index[item]] = -1\n",
-    "        \n",
-    "    return x_1, x_2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_data(teams, dates, results): \n",
-    "    num_games = teams.shape[0]\n",
-    "\n",
-    "    # Create x for all games\n",
-    "    # To access x for 0th game -- x[:, 0] \n",
-    "    x = np.zeros((num_games, 2*num_players))\n",
-    "    for i in range(num_games): \n",
-    "        z, t = x_for_game(teams[i], dates[i])\n",
-    "        combined = np.vstack((z, t))\n",
-    "        x[i, :] = combined[:,0]\n",
-    "    print(x.shape)\n",
-    "\n",
-    "    # Create y for all games (if team A wins, y = 1; if team B wins, y = 0)\n",
-    "    y = np.zeros((num_games, 1))\n",
-    "    for i in range(num_games): \n",
-    "        if results[i] > 0: \n",
-    "            y[i] = 1\n",
-    "        else:\n",
-    "            y[i] = 0\n",
-    "\n",
-    "    return x, y\n",
-    "                \n",
-    "x, y = process_data(unique_teams, unique_dates, unique_game_results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(np.where(x[5, :]==1))"
    ]
   },
   {
@@ -231,24 +131,31 @@
     "    \n",
     "    def gradLossFunction(self, x_teams, y_teams):\n",
     "        update = 0\n",
+    "        theta = np.matrix(self.theta)\n",
     "        for i in range(x_teams.shape[0]):\n",
     "            x = np.matrix(x_teams[i,:])\n",
-    "            y = np.matrix(y_teams[i])\n",
-    "            theta = np.matrix(self.theta)   \n",
+    "            y = np.matrix(y_teams[i])   \n",
     "            update += x.T*x*theta*x.T*x + x.T*y*x\n",
-    "            print(np.where(update > 0))\n",
     "            \n",
     "        return update\n",
     "    \n",
     "    def fit(self, x, y):\n",
-    "        update = 0\n",
+    "        iterations = 0\n",
+    "        abs_error = 1\n",
+    "        \n",
     "        if self.theta is None: \n",
     "            self.theta = np.zeros((2*num_players, 2*num_players))\n",
     "        \n",
-    "        while update == 0 or update >= self.eps:\n",
-    "            update = self.step_size*self.gradLossFunction(x, y)\n",
-    "            self.theta = self.theta - update\n",
-    "            print(update)\n",
+    "        while iterations < self.max_iter and abs_error >= self.eps:\n",
+    "            error = self.step_size*self.gradLossFunction(x, y)\n",
+    "            abs_error = np.linalg.norm(error, 1)\n",
+    "            \n",
+    "            theta_new = self.theta - error\n",
+    "            self.theta = theta_new\n",
+    "            \n",
+    "            iterations += 1\n",
+    "            \n",
+    "            print('Error: %d' %abs_error)\n",
     "        \n",
     "    def process_data(self, teams, dates, results): \n",
     "        num_games = teams.shape[0]\n",
@@ -298,8 +205,7 @@
    "outputs": [],
    "source": [
     "test = LinearRegression()\n",
-    "x, y = test.process_data(unique_teams, unique_dates, unique_game_results)\n",
-    "test.fit(x, y)"
+    "x, y = test.process_data(unique_teams[0:100], unique_dates[0:100], unique_game_results[0:100])"
    ]
   },
   {
@@ -307,7 +213,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test.fit(x, y)"
+   ]
   },
   {
    "cell_type": "code",
