correct theta output

--- a/linear_classifier_bai.ipynb
+++ b/linear_classifier_bai.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "# Create a class for linear regression\n",
     "class LinearRegression:\n",
-    "    def __init__(self, step_size=5e-6, max_iter=3000, eps=1e-6, theta=None, \n",
+    "    def __init__(self, step_size=1e-4, max_iter=10000, eps=1e-6, theta=None, \n",
     "                  verbose=True):\n",
     "        \n",
     "        self.theta = theta\n",
@@ -119,15 +119,16 @@
     "        return 1.0 / (1 + np.exp(-z))\n",
     "        \n",
     "    def predict(self, x):\n",
-    "        z = np.dot(x, self.theta)\n",
+    "        z = np.dot(x.T, self.theta)\n",
     "        return self.sigmoid(z)\n",
     "    \n",
     "    def gradBatchLossFunction(self, x_teams, y_teams):\n",
     "        update = 0\n",
     "        for i in range(x_teams.shape[0]):\n",
     "            x = x_teams[i,:]\n",
-    "            y = y_teams[i]\n",
-    "            update += (self.predict(x) - y)*x\n",
+    "            x_new = np.reshape(x, (2*num_players, 1))\n",
+    "            y = np.asscalar(y_teams[i])\n",
+    "            update += (self.predict(x_new) - y)*x_new\n",
     "            \n",
     "        return update\n",
     "    \n",
@@ -152,7 +153,7 @@
     "        ind = 0\n",
     "        \n",
     "        if self.theta is None: \n",
-    "            self.theta = np.zeros((2*num_players, 2*num_players))\n",
+    "            self.theta = np.zeros((2*num_players, 1))\n",
     "        \n",
     "        if mini == False:\n",
     "            while iterations < self.max_iter and abs_error >= self.eps:\n",
@@ -182,6 +183,8 @@
     "        \n",
     "        print('Convergence!')\n",
     "        plt.plot(error_list)\n",
+    "        plt.xlabel('Iterations')\n",
+    "        plt.ylabel('Error')\n",
     "        plt.show()\n",
     "        \n",
     "    def process_data(self, teams, dates, results): \n",
@@ -233,7 +236,7 @@
    "outputs": [],
    "source": [
     "test = LinearRegression()\n",
-    "x, y = test.process_data(unique_teams[0:100], unique_dates[0:100], unique_game_results[0:100])"
+    "x, y = test.process_data(unique_teams[0:10], unique_dates[0:10], unique_game_results[0:10])"
    ]
   },
   {
@@ -244,6 +247,15 @@
    "source": [
     "# Fit training set\n",
     "test.fit(x, y, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(test.theta.shape)"
    ]
   },
   {
@@ -270,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
