added intercept term

--- a/linear_classifier_bai.ipynb
+++ b/linear_classifier_bai.ipynb
@@ -126,7 +126,7 @@
     "        update = 0\n",
     "        for i in range(x_teams.shape[0]):\n",
     "            x = x_teams[i,:]\n",
-    "            x_new = np.reshape(x, (2*num_players, 1))\n",
+    "            x_new = np.reshape(x, (2*num_players + 1, 1))\n",
     "            y = np.asscalar(y_teams[i])\n",
     "            update += (self.predict(x_new) - y)*x_new\n",
     "            \n",
@@ -153,7 +153,7 @@
     "        ind = 0\n",
     "        \n",
     "        if self.theta is None: \n",
-    "            self.theta = np.zeros((2*num_players, 1))\n",
+    "            self.theta = np.zeros((2*num_players + 1, 1))\n",
     "        \n",
     "        if mini == False:\n",
     "            while iterations < self.max_iter and abs_error >= self.eps:\n",
@@ -192,12 +192,14 @@
     "\n",
     "        # Create x for all games\n",
     "        # To access x for 0th game -- x[:, 0] \n",
-    "        x = np.zeros((num_games, 2*num_players))\n",
+    "        x_without_intercept = np.zeros((num_games, 2*num_players))\n",
     "        \n",
     "        for i in range(num_games): \n",
     "            z, t = self.x_for_game(teams[i], dates[i])\n",
     "            combined = np.vstack((z, t))\n",
-    "            x[i, :] = combined[:,0]\n",
+    "            x_without_intercept[i, :] = combined[:,0]\n",
+    "            \n",
+    "        x = self.add_intercept(x_without_intercept)\n",
     "        \n",
     "        # Create y for all games (if team A wins, y = 1; if team B wins, y = 0)\n",
     "        y = np.zeros((num_games, 1))\n",
@@ -208,7 +210,14 @@
     "                y[i] = 0\n",
     "                \n",
     "        return x, y\n",
-    "\n",
+    "    \n",
+    "    def add_intercept(self, x): \n",
+    "        new_x = np.zeros((x.shape[0], x.shape[1]+1))\n",
+    "        new_x[:, 0] = 1\n",
+    "        new_x[:, 1:] = x\n",
+    "        \n",
+    "        return new_x\n",
+    "        \n",
     "    def x_for_game(self, teams, date): \n",
     "        x_1 = np.zeros((num_players, 1))\n",
     "        x_2 = np.zeros((num_players, 1))\n",
