analysis for linear classifier complete

--- a/linear_classifier_bai2.ipynb
+++ b/linear_classifier_bai2.ipynb
@@ -151,7 +151,6 @@
     "        error_list = []\n",
     "        batch_size = 32\n",
     "        \n",
-    "        \n",
     "        if self.theta is None: \n",
     "            self.theta = np.zeros((2*num_players + 1, 1))\n",
     "        \n",
@@ -178,7 +177,6 @@
     "\n",
     "                iterations += 1\n",
     "                \n",
-    "\n",
     "                print('Error: {}'.format(abs_error))\n",
     "        \n",
     "        print('Convergence!')\n",
@@ -235,45 +233,7 @@
     "        for item in team_2_players: \n",
     "            x_2[player_index[item]] = 1\n",
     "\n",
-    "        return x_1, x_2\n",
-    "    \n",
-    "    def symmetrize(self, m):\n",
-    "        for i in range(m.shape[0]):\n",
-    "            for j in range(i,m.shape[1]):\n",
-    "                m[i][j] = m[j][i] = 0.5*(m[j][i] + m[i][j])\n",
-    "                \n",
-    "        return m\n",
-    "    \n",
-    "    def antisymmetrize(self, m):\n",
-    "        for i in range(m.shape[0]):\n",
-    "            for j in range(i,m.shape[1]):\n",
-    "                m[i][j] = 0.5*(m[i][j] - m[j][i])\n",
-    "                m[j][i] = 0.5*(m[j][i] - m[i][j])\n",
-    "        return m\n",
-    "    \n",
-    "    def project(self, m):\n",
-    "        side = m.shape[0]\n",
-    "        S = self.symmetrize(m[0:int(side/2-1)][0:int(side/2-1)])\n",
-    "        S_minus = self.symmetrize(m[int(side/2):-1][int(side/2):-1])\n",
-    "        A = self.antisymmetrize(m[0:int(side/2-1)][int(side/2):-1])\n",
-    "        A_minus = self.antisymmetrize(m[int(side/2):-1][0:int(side/2-1)])\n",
-    "        S_new = (S - S_minus)/2\n",
-    "        S_minus_new = (S_minus - S)/2\n",
-    "        \n",
-    "        if np.linalg.norm(A.T-A_minus) < np.linalg.norm(A-A_minus):\n",
-    "            A_new = 0.5*(A+A_minus)\n",
-    "            A_minus_new = A_new.T\n",
-    "        else:\n",
-    "            A_new = 0.5*(A+A_minus.T)\n",
-    "            A_minus_new = A_new.T\n",
-    "            \n",
-    "        M = np.zeros(m.shape)\n",
-    "        M[0:int(side/2-1)][0:int(side/2-1)] = S\n",
-    "        M[int(side/2):-1][int(side/2):-1] = S_minus\n",
-    "        M[0:int(side/2-1)][int(side/2):-1] = A\n",
-    "        M[int(side/2):-1][0:int(side/2-1)] = A_minus\n",
-    "        \n",
-    "        return M"
+    "        return x_1, x_2"
    ]
   },
   {
@@ -10591,7 +10551,6 @@
     "playoff_results = np.array(playoff_results)\n",
     "playoff_dates = np.array(playoff_dates)\n",
     "\n",
-    "    \n",
     "playoff_x, playoff_y = test.process_data(playoff_teams, playoff_dates, playoff_results)\n",
     "\n",
     "print(playoff_x)\n",
@@ -10704,7 +10663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
