lots of changes

--- a/linear_classifier.ipynb
+++ b/linear_classifier.ipynb
@@ -142,7 +142,7 @@
     "        for i in range(batch_size):\n",
     "            x = data[i, :]\n",
     "            y = data[:, i]\n",
-    "            update += (y - predict(x))*x\n",
+    "            update += (self.predict(x) - y)*x\n",
     "            \n",
     "        return update\n",
     "    \n",
@@ -165,7 +165,7 @@
     "                self.theta = theta_new\n",
     "                \n",
     "                if iterations % 100 == 0: \n",
-    "                    print('Error: {}'.format(abs_error))\n",
+    "                    print('Error {}: {}'.format(iterations, abs_error))\n",
     "\n",
     "                iterations += 1\n",
     "        else:\n",
@@ -179,8 +179,8 @@
     "\n",
     "                iterations += 1\n",
     "                \n",
-    "                if iterations % 10 == 0: \n",
-    "                    print('Error: {}'.format(abs_error))\n",
+    "                if iterations % 100 == 0: \n",
+    "                    print('Error {}: {}'.format(iterations, abs_error))\n",
     "        \n",
     "        print('Convergence!')\n",
     "        plt.plot(error_list)\n",
